--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -18,7 +18,7 @@ body {
   font-family: var(--font-family-base);
 }
 
-section h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-family-title);
 }
 
