--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -32,7 +32,7 @@ body {
   min-height: var(--line-height-base);
 }
 
-section h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-family-title);
   font-weight: var(--font-weight-bold);
 }
