--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -29,7 +29,7 @@ body {
   font-family: var(--font-family-base);
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-regular);
-  min-height: var(--line-height-base);
+  line-height: calc(var(--line-height-base) * 1em);
 }
 
 h1, h2, h3, h4, h5, h6 {
