--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -1,3 +1,5 @@
+/* Add a universal box sizing rule */
+
 @import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
 
 :root {
