--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -138,7 +138,7 @@ a:active {
   text-align: center;
 }
 
-.nav.nav-item {
+.nav-item {
   font-family: var(--nav-item-font-family);
   font-weight: var(--nav-item-font-weight);
   font-size: var(--nav-item-font-size);
@@ -147,12 +147,12 @@ a:active {
   margin: var(--nav-item-margin);
 }
 
-.nav.nav-link {
+.nav-link {
   display: block;
   padding: 0.5rem 1rem;
 }
 
-.nav.nav-link:hover {
+.nav-link:hover {
   color: var(--nav-item-link-hover);
 }
 
