--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -123,7 +123,7 @@ a:active {
   font-weight: var(--font-weight-bold);
 }
 
-.row ul {
+ul.row {
   margin: 0;
   padding: 0;
   list-style-type: none;
