--- a/0x02-CSS_advanced/styles/20-style.css
+++ b/0x02-CSS_advanced/styles/20-style.css
@@ -175,7 +175,7 @@ ul.row {
   color: var(--nav-item-link-hover);
 }
 
-row::after {
+.row::after {
   content: "";
   display: table;
   clear: both;
