--- a/0x02-CSS_advanced/styles/24-style.css
+++ b/0x02-CSS_advanced/styles/24-style.css
@@ -93,13 +93,13 @@ a:active {
   margin: none;
 }
 
-a .card-services {
+.card-services a {
   display: block;
   padding: 2rem;
   background-color: var(--color-light-grey);
 }
 
-a .card-services:hover {
+.card-services a:hover {
   color: var(--color-white);
   background-color: var(--color-primary);
   text-decoration: none;
