--- a/0x02-CSS_advanced/styles/24-style.css
+++ b/0x02-CSS_advanced/styles/24-style.css
@@ -89,7 +89,7 @@ a:active {
   color: var(--color-primary);
 }
 
-.card-title > .card-services {
+.card-services .card-title {
   margin: none;
 }
 
