--- a/0x02-CSS_advanced/styles/25-style.css
+++ b/0x02-CSS_advanced/styles/25-style.css
@@ -90,7 +90,7 @@ a:active {
   background-color: var(--color-light-grey);
 }
 
-button {
+.button {
   display: var(--button-display);
   padding: var(--button-padding);
   border: var(--button-border);
@@ -99,7 +99,7 @@ button {
   text-decoration: var(--button-text-decoration);
 }
 
-button:hover {
+.button:hover {
   color: var(--button-hover-color);
   text-decoration: var(--button-hover-text-decoration);
   background-color: var(--button-hover-background);
