--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -198,14 +198,25 @@ a:active {
   position: relative;
 }
 
-.card-title a,
+.card-title a {
+  display: block;
+  text-decoration: none;
+  padding-top: 45%;
+}
 .card-work  a {
   display: block;
   text-decoration: none;
   padding-top: 45%;
 }
 
-.card-title a::after,
+.card-title a::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: "";
+}
 .card-work a::after {
   position: absolute;
   top: 0;
