--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -193,30 +193,19 @@ a:active {
 .card-work .card-title {
   text-align: center;
   margin: 0;
-  opacity: 0;
+  opacity: 0.1;
   height: 100%;
   position: relative;
 }
 
-.card-title a {
-  display: block;
-  text-decoration: none;
-  padding-top: 45%;
-}
+.card-title a,
 .card-work  a {
   display: block;
   text-decoration: none;
   padding-top: 45%;
 }
 
-.card-title a::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  content: "";
-}
+.card-title a::after,
 .card-work a::after {
   position: absolute;
   top: 0;
