Update 30-style.css IV

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -198,15 +198,13 @@ a:active {
   position: relative;
 }
 
-.card-title a,
-.card-work  a {
+.card-title .card-work  a {
   display: block;
   text-decoration: none;
   padding-top: 45%;
 }
 
-.card-title a::after,
-.card-work a::after {
+.card-title .card-work a::after {
   position: absolute;
   top: 0;
   left: 0;
