Update 30-style.css V

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -197,8 +197,8 @@ a:active {
   height: 100%;
   position: relative;
 }
-
-.card-title .card-work  a {
+.card-work,
+.card-title a {
   display: block;
   text-decoration: none;
   padding-top: 45%;
