Update 30-style.css VII

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -198,7 +198,7 @@ a:active {
   position: relative;
 }
 
-.card-title a {
+.card-work .card-title a {
   display: block;
   text-decoration: none;
   padding-top: 45%;
