Update 30-style.css VIII

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -204,7 +204,7 @@ a:active {
   padding-top: 45%;
 }
 
-.card-title .card-work a::after {
+.card-work .card-title a::after {
   position: absolute;
   top: 0;
   left: 0;
