Hide menu icon in desktop mode

--- a/0x03-responsive_design/08-styles.css
+++ b/0x03-responsive_design/08-styles.css
@@ -1047,7 +1047,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    .header, .menu-icon {
+    .header .menu-icon {
       display: none;
     }    
   }
