--- a/0x03-responsive_design/06-styles.css
+++ b/0x03-responsive_design/06-styles.css
@@ -1020,7 +1020,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    .header, .menu-icon {
+    .header .menu-icon {
       display: none;
     }    
   }
