--- a/0x03-responsive_design/07-styles.css
+++ b/0x03-responsive_design/07-styles.css
@@ -1032,7 +1032,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    .header, .menu-icon {
+    .header .menu-icon {
       display: none;
     }    
   }
