--- a/0x03-responsive_design/09-styles.css
+++ b/0x03-responsive_design/09-styles.css
@@ -1063,7 +1063,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    .header, .menu-icon {
+    .header .menu-icon {
       display: none;
     }    
   }
